--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "backend/server.js",
   "scripts": {
-    "test": "nodemon backend/server.js",
-    "start": "node server.js"
+    "start": "nodemon backend/server.js",
+    "build": "node server.js"
   },
   "author": "",
   "license": "ISC",
