--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "@mui/lab": "^5.0.0-alpha.94",
     "@mui/material": "^5.10.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "country-state-city": "^3.1.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "overlay-navbar": "^1.2.3",
     "patch-package": "^6.4.7",
