--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.4.4",
     "nodemailer": "^6.7.7",
     "patch-package": "^6.4.7",
+    "stripe": "^10.6.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
